--- a/src/pages/AboutPage/style.scss
+++ b/src/pages/AboutPage/style.scss
@@ -42,6 +42,12 @@
         font-weight: 300;
         text-align: center;
       }
+
+      .center {
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
+      }
     }
   }
 
